# CI_test

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  TPscript.ps1  run.ps1  runLinux.sh
_builds/make/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_builds/make/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_builds/make/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_builds/make/googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_builds/make/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
_builds/make/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
include/: change.h
src/: change.cpp  changeUT.cpp  main.cpp
test/: changeUT.cpp
